--- a/main.tex
+++ b/main.tex
@@ -5,11 +5,8 @@
 \usepackage{mathtools}
 % \usepackage{amsmath}    % already loaded by mathtools
 \usepackage{amssymb}
-\usepackage{amsfonts}
+% \usepackage{amsfonts}
 
-\usepackage{upquote}
-\usepackage{microtype}
-\UseMicrotypeSet[protrusion]{basicmath}    % disable protrusion for tt fonts
 
 % \usepackage{float}
 \usepackage{graphicx}
