improved comment a tiny bit

--- a/header.tex
+++ b/header.tex
@@ -12,8 +12,8 @@
 
 % Inter font stylistic sets:
 % ss01: alternate digits for 3, 4, 6, 8
-% ss02: for disambiguation (with zero) in places like ill or O0
-% ss02: for disambiguation (without zero) in places like ill
+% ss02: for disambiguation (with zero) in places like "Ill" or "O0"
+% ss02: for disambiguation (without zero) in places like "Ill"
 % ss03: round comma, quation marks
 
 \usepackage{microtype}
