only change sans font, not the main font
Since beamer uses sans font by default

--- a/header.tex
+++ b/header.tex
@@ -7,7 +7,7 @@
 % \usepackage{inter}    % font package
 
 \usepackage{fontspec}
-\setmainfont{Inter}[RawFeature={+ss01, +ss02, +ss03, +dlig}]
+% \setmainfont{Inter}[RawFeature={+ss01, +ss02, +ss03, +dlig}]
 \setsansfont{Inter}[RawFeature={+ss01, +ss02, +ss03, +dlig}]
 
 % Inter font stylistic sets:
